[gd_scene load_steps=3 format=3 uid="uid://d0qp2isr5b0bc"]

[ext_resource type="Script" path="res://ui/common_settings.gd" id="1_qaqa5"]
[ext_resource type="PackedScene" uid="uid://cp86txivesok6" path="res://scenes/NumberInput.tscn" id="1_x1n22"]

[node name="Window" type="Window"]
initial_position = 2
size = Vector2i(400, 200)
script = ExtResource("1_qaqa5")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="PlaybackLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Playback speed:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="MsLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "13 ms per frame"
horizontal_alignment = 1

[node name="MsSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 0.5
step = 0.001

[node name="EqualityLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "â‰ˆ"
horizontal_alignment = 1

[node name="NumberInput" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_x1n22")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Frames per second: "
number = 12

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Close"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/MsSlider" to="." method="_on_slider_changed"]
[connection signal="number_changed" from="PanelContainer/VBoxContainer/HBoxContainer/NumberInput" to="." method="_on_fps_number_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CloseButton" to="." method="hide"]
